app/webroot/css/app.css
body { margin-top: 90px; margin-bottom: 90px;}

.beta { background: url(/img/beta_ribbon.png) no-repeat left top; position: fixed; left: 0; top: 0; width: 78px; height: 75px; z-index: 1040; }

.footer {
	padding: 20px 0;
}

.navbar-brand {
	background: url(../img/logo-icon.png) left center no-repeat;
	padding-left: 36px;
	font-size: 24px;
	color: black;
}

.footer {
	margin-top: 50px;
	color: #eee;
	background-color: rgb(39, 39, 39);
}

.spacer {
	margin-bottom: 20px;
}

.submenu {
	z-index: 10;
}

.affix .affix-hidden {
	display: none;
}

.main-navigation {
	position: fixed;
}

.nav .caret {
	border-top-color: white !important;
	border-bottom-color: white;
}

@media (min-width: 1200px) {
	.main-navigation {
		width: 240px;
	}
}

@media (min-width: 992px) and (max-width: 1199px) {
	.main-navigation {
		width: 200px;
	}
}

@media (min-width: 0) and (max-width: 991px) {
	body {
		margin-bottom: 0px;
	}
	.submenu.affix {
		position: relative;
	}
	.footer.navbar-fixed-bottom {
		position: relative;
	}
}

@media (min-width: 0) and (max-width: 1199px) {
	.main-navigation {
		width: 100%;
		position: relative;
	}
}

